examples/gateways/prefix/virtual-service.yml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway
  http:
    - match:
      - uri:
          prefix: /v1
      route:
      - destination:
          host: hello
          subset: v1

    - match:
      - uri:
          prefix: /v2
      route:
      - destination:
          host: hello
          subset: v2
